<resources>
    <string name="app_name">My Football</string>

    <string name="title_activity_league_schedule">LeagueScheduleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <string name="team">Team</string>
    <string name="search">Search</string>

</resources>
